# pycli

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: pr.yaml
docs/: api.md  build.py  requirements.txt
examples/: alt_constructor.py  basic.py  decorated.py  enums.py  no_hints.py
src/pycli/: __init__.py  decorators.py  parser.py
tests/: classes.py  decorator_test.py  parser_test.py
